--- a/styles/global.css
+++ b/styles/global.css
@@ -43,7 +43,6 @@ body {
   margin-left: 15%;
   z-index: 100;
   color: #fff;
-  /* color: black; */
 }
 
 .landing_big_text_2 {
@@ -122,7 +121,7 @@ body {
 }
 
 .spacer {
-  height: 70vh;
+  height: 50vh;
 }
 
 @media (max-width: 480px) {
@@ -133,4 +132,121 @@ body {
   .title {
     font-size: 20px;
   }
+}
+
+/* LESSON 3 */
+
+.panels {
+  /* overflow: scroll; */
+  height: 100vh;
+  width: 100%;
+  /* scroll-snap-type: y mandatory; */
+}
+
+.panel {
+  box-shadow: 40px red;
+  /* scroll-snap-align: start; */
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.25);
+  display: flex;
+  justify-content: center;
+  background: #1d1e22;
+}
+
+.panel img {
+  width: 100%;
+  height: 100vh;
+  object-fit: cover;
+}
+
+.panel h2 {
+  position: absolute;
+  top: 0;
+  margin: 0;
+  padding: calc(100vh - 64px) 50px 0;
+  z-index: 3;
+  left: 0;
+  color: #fff;
+}
+
+.clip {
+  position: sticky;
+  height: 0;
+  width: 100%;
+  top: 0;
+  margin-bottom: 0;
+}
+
+.tint {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.1);
+  width: 100vw;
+  height: 100vh;
+  z-index: 2;
+  pointer-events: none;
+}
+
+.controls {
+  position: fixed;
+  bottom: 40px;
+  right: 40px;
+  z-index: 2;
+  font-size: 30px;
+  font-family: courier, mono;
+  display: flex;
+  flex-wrap: wrap;
+  color: #fff;
+}
+.controls div.disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+.controls div {
+  display: block;
+  width: 36px;
+  height: 36px;
+  line-height: 36px;
+  border-radius: 36px;
+  text-align: center;
+  background: rgba(0, 0, 0, 0);
+  cursor: pointer;
+}
+.controls div:first-child {
+  margin-right: -8px;
+}
+
+span.note {
+  position: fixed;
+  bottom: 40px;
+  right: calc(20px + 120px);
+  z-index: 2;
+  color: #fff;
+}
+
+.video_clip {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 1;
+  pointer-events: none;
+  overflow: hidden;
+}
+
+.video_clip iframe {
+  z-index: 1;
+  border: 0;
+  width: 100vw;
+  height: 56.25vw;
+  min-height: 100%;
+  min-width: 177.77vh;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
